# tsk-scheduler

./: CMakeLists.txt  Dockerfile  README.md  dpkg-requirements.txt
etc/: tasks.json
include/: config.h
src/: CMakeLists.txt  config.cpp  config.h  tsk_scheduler.m.cpp
src/common/: common.cpp  common.h  common.hpp
src/data-accessor/: data_accessor.cpp  data_accessor.h  json_data_accessor.cpp  json_data_accessor.h
src/data-models/: task.cpp  task.h
src/scheduler/: scheduler.cpp  scheduler.h  scheduler_engine.cpp  scheduler_engine.h  window.cpp  window.h
src/threads/: asio_thread_pool.hpp
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  all_unit_tests.t.cpp  config_test.hpp  data_accessor_json_test.hpp  task_test.hpp
test/unit/mock/boost/: asio.hpp
